# Expense-Tracker-POC

./: Expense_Tracker_API.postman_collection.json  README.md  app.py  pyproject.toml  requirements.txt
instance/: data.db
models/: expense_model.py  user_model.py
route/: auth_route.py  expense_route.py
service/: auth_service.py  expense_service.py
